Security Fix: harden path handling, SQL usage, open redirects, and logging in Java lessons